--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -1,4 +1,4 @@
-
+ * keymap defined through tiemu compatible text files
  * connection management UI [external and virtual]
  * keypress visual feedback
  * calc 2 calc linking (physical) [i.e between a real calc and an emulated one]
