--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -1,11 +1,10 @@
  * keymap defined through tiemu compatible text files
  * connection management UI [external and virtual]
- * keypress visual feedback
- * calc 2 calc linking (physical) [i.e between a real calc and an emulated one]
  * debugging :
 	* breakpoints management
 	* instruction stepping
 	* pretty registers display (allow modifications)
 	* disassembly
  * settings UI
+ * calc 2 calc linking (physical) [i.e between a real calc and an emulated one] (necessary?)
 
