Updated TODO. Added tilibs2 autodetection under *nix (using pkg-config) to determine whether to enable link support.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@74 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -6,5 +6,7 @@
 	* pretty registers display (allow modifications)
 	* disassembly
  * settings UI
+ * screen capture (static and animated)
+ * ROM dumping
  * calc 2 calc linking (physical) [i.e between a real calc and an emulated one] (necessary?)
 
