Smooth skin scaling. Calc2calc connection management UI. Initial work for tilem log redirection (log display widget to come). A couple of small graphical experiments. Added a system tray icon (icon missing) Differentiated closing main window and quitting app.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@76 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -1,5 +1,6 @@
  * keymap defined through tiemu compatible text files
- * connection management UI [external and virtual]
+ * connection management UI [external and virtual] => [DONE]
+ * CalcView smooth scaling => [DONE]
  * debugging :
 	* breakpoints management
 	* instruction stepping
@@ -9,4 +10,8 @@
  * screen capture (static and animated)
  * ROM dumping
  * calc 2 calc linking (physical) [i.e between a real calc and an emulated one] (necessary?)
+ * log widget (redirecting tilem errors/warnings)
+ 
+ * skin editor?
+ * auto-generation of keymask from skin image?
 
