--- a/gui-qt/README
+++ b/gui-qt/README
@@ -7,7 +7,7 @@ It is written in C++ using the Qt4 toolkit and released under GNU GPL3.
 
 	* get all dependencies, namely Qt4 and libtilemcore (and obviously their dependencies as well)
 	optionnally you may want to get libticalcs2/libticables/libtifiles (all of which are TILP
-	dependencies) to enable link emulation.
+	dependencies and which themselves depend on libiconv and glib) to enable link emulation.
 	
 	* run the following command in a shell (in the appropriate directory) :
 	
@@ -16,6 +16,15 @@ It is written in C++ using the Qt4 toolkit and released under GNU GPL3.
 	or, to build with link emulation (requires libticalcs2 and co) :
 	
 		qmake -config enable_link && make
+	
+	Note that under *nix systems the presence of tilibs2 is auto-detected via pkg-config (which
+	obviously requires a "proper" installation of them) so this switch is mostly useful under
+	windows, in which case you first need to edit the project file by hand to adjust include/lib
+	pathes.
+	
+	If, on the contrary you want to explicitely disable link emulation you can do it as follows :
+	
+		qmake -config disable_link && make
 	
 	To properly switch from a build to another (and make sure no remaining intermediate compilation
 	files get in the way) do :
@@ -37,19 +46,24 @@ It is written in C++ using the Qt4 toolkit and released under GNU GPL3.
 	may cause noticeable slowdown of the emulation of ALL calcs). To add a new calc use the "Add calc"
 	button in the toolbar and to remove one use the "Close" entry of the calc's context menu.
 	
-	The main UI supports two modes : Merged and Floating. Use F1 and F2 to select the one you
-	like most.
+	Each emulated calc can be independently detached from the grid (and re-attached afterwards)
+	through its context menu.
+	
+	Each emulated calc can be independently zoomed in/out using Ctrl+wheel.
 	
 	All buttons of emulated calc skins are clickable and most keypresses can also be triggered
-	through the keyboard but only the active calc will catch keyboard events. In Merged windows
-	mode the active calc is indicated by the raised frame around it.
+	through the keyboard but only the active calc will catch keyboard events.
 	
 	At anytime, for every emulated calc, you have the possibility to save the emulator state
 	(ROM/RAM/regs/...) into a file (note that it may alter the source ROM if archive was written
 	to during the emulation session) and to switch to a different ROM.
 	
 	tilem supports z80-based TI calculators from the 73 to the 86 but some skins are lacking
-	at the moment so it is not recommended to try to load 76/81/82/85/86 ROMS at the moment.
+	at the moment so if you load 76/81/82/85/86 ROMS you'll have to select another skin.
+	
+	Upon ROM loading tilem will try to autodetect ROM type and present you with a combobox where
+	the guess is elected but all the other supported ROM types are available so you can correct
+	a wrong guess or try some weird (in)compatibility experiment.
 	
 3) Linking
 	
@@ -63,6 +77,9 @@ It is written in C++ using the Qt4 toolkit and released under GNU GPL3.
 	other programs using libticables (most notably TiLP) to communicate with an emulated
 	calc.
 	
+	Among these only calc2calc does not depend on tilibs (and is therefore available regardless
+	of the build options).
+	
 	The drag2calc mode is always active (provided link support was enabled at compile time)
 	but the other two modes have to be enabled manually.
 	
@@ -71,7 +88,7 @@ It is written in C++ using the Qt4 toolkit and released under GNU GPL3.
 	calc2calc connections and drag2calc operations running at the same time as long as each
 	calc is only involved in one at the same time.
 	
-	The external connection is even more restricted (due to internal libticables limitaiton)
+	The external connection is even more restricted (due to internal libticables limitation)
 	in that there can only one connection at a time (systemwide).
 	
 4) Debugging
