Small code cleanup. More work on breakpoints UI.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@86 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -2,13 +2,12 @@
  * debugging :
 	* breakpoints management
 	* instruction stepping
-	* pretty registers display (allow modifications)
+	* hex mem view
 	* disassembly
  * settings UI
  * animated screen capture
  * ROM dumping
  * calc 2 calc linking (physical) [i.e between a real calc and an emulated one] (necessary?)
- * log widget (redirecting tilem errors/warnings)
  
  * skin editor?
  * auto-generation of keymask from skin image?
