Debugger now sports disassembly. More debugger polishing.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@92 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -9,6 +9,8 @@
  * ROM dumping
  * calc 2 calc linking (physical) [i.e between a real calc and an emulated one] (necessary?)
  
+ * skins
+ 
  * skin editor?
  * auto-generation of keymask from skin image?
 
