Behold the keymaps : mostly VTI/TiEmu backward compat but with significant room for extensions.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@106 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -1,14 +1,17 @@
- * keymap defined through tiemu compatible text files
+ * automatic keymap selection
+ * keymap switching UI
  * debugging :
 	* breakpoints management
 	* instruction stepping
 	* hex mem view
 	* disassembly
+	* scripting
  * settings UI
  * animated screen capture
  * ROM dumping
  * calc 2 calc linking (physical) [i.e between a real calc and an emulated one] (necessary?)
  
+ * keymaps
  * skins
  
  * skin editor?
