--- a/gui-qt/TODO
+++ b/gui-qt/TODO
@@ -1,5 +1,7 @@
  * automatic keymap selection
  * keymap switching UI
+ * skinless mode
+ * use GS emu code from core
  * debugging :
 	* breakpoints management
 	* instruction stepping
