New feature : Could change view to see only the lcd. Save and load state (stored in sav).
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@128 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/skn/README
+++ b/gui/skn/README
@@ -1,5 +1,5 @@
 For the source of the pictures :
-ti73.skn = no authors (seems to be public domain or free) 
+ti73.skn = no author (seems to be public domain or free) 
 ti81.skn = GFDL wikimedia.commons
 ti82.skn = GFDL wikimedia.commons
 TI82stats.skn = GFDL wikimedia.commons
