--- a/gui/skn/README
+++ b/gui/skn/README
@@ -1,3 +1,26 @@
+** About the format : **
+
+When I started to work on tilem 2, I decided firstly to use the old tilem format (4 pixs around a lcd).
+But that's not a good idea, and the new skin creation is so hard like this ... :(
+
+Finally, we (with Benjamin) have choosen the Tiemu skin format:
+This format consists in a binary file containing skin information (author, name, model, size etc...) and in the second part :the image data.
+With this format, it becomes really simple and fun to create a skin.
+Tiemu Skinedit works perfectly for tilem 2 (how do you think I 've created these "officials skins :P).
+I hope this new format will pleased to you.
+
+Thank you Julien Blache for his help and his authorization to use Tiemu skin format and skinops.c/skinops.h.
+Thank you Romain Lievin too.
+
+
+
+** About the image source : **
+
+To find free files to generate skins is not so easy :|
+A part was found on wikimedia (god bless wikimedia)
+For the others, it seems there's no one to revendicate.
+(I'm just waiting for an eventually DCMA notice lol)
+
 For the source of the pictures :
 ti73.skn = no author (seems to be public domain or free) 
 ti81.skn = GFDL wikimedia.commons
@@ -6,3 +29,15 @@ TI82stats.skn = GFDL wikimedia.commons
 ti83.skn = My TI83 !!!
 ti83plus.skn = no author (modified with The gimp)
 ti84plus.skn = no author (modified with The gimp)
+...
+...
+Your contribution ...
+Your contribution ...
+Your contribution ...
+...
+...
+...
+
+Have fun with tilem 2 ;)
+
+Thibault Duponchelle (aka contra-sh)
