--- a/gui/skn/README
+++ b/gui/skn/README
@@ -28,7 +28,7 @@ ti82.skn = GFDL wikimedia.commons
 TI82stats.skn = GFDL wikimedia.commons
 ti83.skn = My TI83 !!!
 ti83plus.skn = no author (modified with The gimp)
-ti84plus.skn = no author (modified with The gimp)
+ti84plus.skn = My TI84plus !!! 
 ...
 ...
 Your contribution ...
