I 've finally found what's wrong in my gif creation so I can create multicolor gif easily :). For the moment it's just a proof of concept. I will adapt it on the others functions, and add options tomorow...
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@363 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/CHANGELOG
+++ b/gui/CHANGELOG
@@ -205,5 +205,9 @@
 * - Completely remove GLOBAL_SKIN_INFOS structure from tilem2.
 * ---10/05/11---
 * - Change strutures to look like a object oriented model. But in some case it's not really well implemented.
+* ---11/05/11---
+* - Refactor a lot of gif header's code.
+* ---12/05/11---
+* - I finally found what's wrong in my gif creation. So I can do multicolor gif now.
 */
 
