Correct an stupid error in getvar.c and add a ti83plus.fr skin given by Claudiux :) Thanks to him
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@438 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/CHANGELOG
+++ b/gui/CHANGELOG
@@ -242,5 +242,12 @@
 * ---27/05/11---
 * - Correct some stuff (see mailing list to know why). And add a palette setter in animation.c and a visual feedback when foreground/background color are changed.
 * - Some other minor improvement.
+* ---19/09/11---
+* - Restart working on tilem2 after holiday:)
+* - Add new file getvar.c to handle get var function (receiving var from calc to PC).
+* ---20/09/11---
+* - Some improvement to the rcvmenu. 
+* ---22/0911---
+* - Add the ti83pfr.skn file. This skin is for ti83plus.fr. The creator is Claude Clerc (aka claudiux). He donate the skin under GPL v3+ licence.Thanks to him !!!
 */
 
