--- a/data/skins/README
+++ b/data/skins/README
@@ -18,8 +18,8 @@ Thank you Romain Lievin too.
 
 To find free files to generate skins is not so easy :|
 A part was found on wikimedia (god bless wikimedia)
+Some other are created and donated by tilem2 users :)
 For the others, it seems there's no one to revendicate.
-(I'm just waiting for an eventually DCMA notice lol)
 
 For the source of the pictures :
 ti73.skn = no author (seems to be public domain or free) 
@@ -27,8 +27,9 @@ ti81.skn = GFDL wikimedia.commons
 ti82.skn = GFDL wikimedia.commons
 TI82stats.skn = GFDL wikimedia.commons
 ti83.skn = My TI83 !!!
-ti83plus.skn = no author (modified with The gimp)
-ti84plus.skn = My TI84plus !!! 
+ti83p.skn = no author (modified with The gimp)
+ti83pfr.skn = GPL v3+ given by Claude Clerc (aka claudiux). It's his calc. Thanks to him !!!
+ti84p.skn = My TI84plus !!! 
 ...
 ...
 Your contribution ...
