Remove the unused getvar.c file
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@505 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/CHANGELOG
+++ b/gui/CHANGELOG
@@ -265,5 +265,8 @@
 * ---14/11/11--- 
 * - Benjamin adds a totally new core task manager in the gui. Begin to convert the send files function to use it.
 * - Use this task manager for macro. There's a little priority problem when a macro load a file. Load a file then run a macro at startup works fine.
+* ---15/11/11--- 
+* - Receive non silent vars : Benjamin get it working!
+* - Remove unused getvar.c file.
 */
 
