Add multiple selection and multiple receive file
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@506 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/CHANGELOG
+++ b/gui/CHANGELOG
@@ -268,5 +268,7 @@
 * ---15/11/11--- 
 * - Receive non silent vars : Benjamin get it working!
 * - Remove unused getvar.c file.
+* ---16/11/11---
+* - Allow multiple selection and multiple receive file. Need to fix a segfault (tomorow... xD).
 */
 
