New command line parser. Now use g_option from glib. A lot of stuff are already handled with this. Lot of new options are parsed (but not implemented, just parsed).Also delete args.c and TilemCmdlineArgs
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@543 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/CHANGELOG
+++ b/gui/CHANGELOG
@@ -275,5 +275,10 @@
 * - Repare the file loading inside a macro (it was broken by new task manager).
 * - Delete a lot of unused functions/printf.
 * - Remove debuginfo.h file.
+* ---22/11/11---
+* - Benjamin finished the last things left to do on receive dialog. Nice!
+* ---25/11/11---
+* - New command line parser. Now tilem2 uses g_option from the glib instead of getopt. Easy handling of long options. Do not need to take care about correct parsing. A lot of new options are provided but not implemented !
+* - Delete args.c (old _but working well _ cmd line parser using getopt) and TilemCmdlineArgs structure from gui.h.
 */
 
