--- a/data/skins/README
+++ b/data/skins/README
@@ -27,7 +27,8 @@ ti82.skn = GFDL wikimedia.commons
 TI82stats.skn = GFDL wikimedia.commons
 ti83.skn = My TI83 !!!
 ti83pfr.skn = GPL v3+ given by Claude Clerc (aka claudiux). It's his calc. Thanks to him !!!
-ti84p.skn = My TI84plus !!! 
+ti84p.skn = My TI84plus !!!
+ti84p2.skn = Mine.
 ti86.skn = LGPL v2.1. Picture given by Danilo Segan. I've resized with the gimp and I've done the skin (the skin given by Danilo was perfect but too big).Thanks to him !!!
 ...
 ...
