Add a ti83p.skn. If we found a better picture, I will replace it, but this one is correct atm.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@584 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/skins/README
+++ b/data/skins/README
@@ -19,13 +19,14 @@ Thank you Romain Lievin too.
 To find free files to generate skins is not so easy :|
 A part was found on wikimedia (god bless wikimedia)
 Some other are created and donated by tilem2 users :)
-For the others, it seems there's no one to revendicate.
+Some other are just my own calc.
 
 For the source of the pictures :
 ti81.skn = GFDL wikimedia.commons
 ti82.skn = GFDL wikimedia.commons
 TI82stats.skn = GFDL wikimedia.commons
 ti83.skn = My TI83 !!!
+ti83p.skn = GFDL wikimedia.commons
 ti83pfr.skn = GPL v3+ given by Claude Clerc (aka claudiux). It's his calc. Thanks to him !!!
 ti84p.skn = My TI84plus !!!
 ti84p2.skn = Mine.
